@@ -1,3 +1,13 @@
+
+2004-12-14  Brian Kahne  <bkahne@ibmoto.com>
+
+	* Fixed bug with single-consumer clocked channels:  We weren't
+	clearing _readt so on a second pass to an alt where we had to
+	sleep, we'd assert.
+
+	* Added clock9 to test clocked channels interacting with
+	non-clocked channels in an alt.
+
         ======= plasma release 0.8.5 (v0_8_5) on Linux (cde-tx32-ldt189) =======
 
         ======= plasma release 0.8.5 (v0_8_5) on Linux (cde-tx32-ldt189) =======
